--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
     <string name="app_name">Gluko</string>
     <string name="btn_iniciar">Iniciar</string>
     <string name="btn_registrar">Registrar</string>
-    <string name="btn_iniciar_seccion">Iniciar Seccion</string>
+    <string name="btn_iniciar_seccion">Iniciar Sesión</string>
     <string name="btn_registrar_usuario">Registrar Usuario</string>
 </resources>
