--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="btn_registrar">Registrar</string>
     <string name="btn_iniciar_seccion">Iniciar Sesión</string>
     <string name="btn_registrar_usuario">Registrar Usuario</string>
+    <string name="texthintCorreo">Correo</string>
+    <string name="texthintContraseña">Contraseña</string>
 </resources>
